apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata: {name: sonarr, namespace: media}
spec:
  selector: {app.kubernetes.io/name: media-vpn}
  ports:
    - {name: http, port: 8989, targetPort: sonarr}
---
apiVersion: v1
kind: Service
metadata: {name: sonarr-access, namespace: media}
spec:
  selector: {app.kubernetes.io/name: media-vpn}
  ports:
    - {name: http, port: 80, targetPort: so-access}
